# vibecheck

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_scanner.py
vibecheck/: __init__.py  cli.py  patterns.py  reporter.py  scanner.py  scorer.py
