[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibechecker"
version = "0.1.0"
description = "Audit your AI-generated code. Catch anti-patterns, security issues, and get a vibe score."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Hiren Thakore"}]
keywords = ["ai", "code-quality", "linting", "security", "vibe-coding", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.0",
    "typer>=0.9",
]

[project.scripts]
vibecheck = "vibecheck.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["vibecheck*"]
